tests/error/comptime/compare_pointers1.bz
// error: invalid pointer comparison
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *i32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		foo() < foo();
	});
}
